# trist_ws4

devel/: .catkin  .rosinstall  setup.sh
devel/lib/gps_goal/: gps_goal
devel/lib/pkgconfig/: gps_goal.pc  gps_pkg.pc  igv.pc  lidar_pkg.pc  realsense2_camera.pc  realsense2_description.pc  vectornav.pc
devel/lib/vectornav/: vnpub
src/gps_pkg/: CMakeLists.txt  package.xml
src/gps_pkg/launch/: gps_node.launch
src/gps_pkg/src/: gps_gui.py  gps_node.py
src/igv/: CMakeLists.txt  readme.txt
src/igv/config/: costmap_common_params.yaml  global_costmap_params.yaml  joint_names_igv.yaml  local_costmap_params.yaml  local_planner_params.yaml
src/igv/launch/: amcl.launch  gps_localization.launch  igv_navigation.launch  igv_robot.launch  igv_slam.launch  joystick_controller.launch  light.launch  move_base.launch  sensors.launch
src/igv/maps/: back_jacaranda.pgm  back_jacaranda.yaml  blank_map.yaml  map1.yaml
src/igv/meshes/: camera_link.STL  front_caster_bar_link.STL  front_caster_hub_link.STL  front_caster_wheel_link.STL  gps_link.STL  imu_link.STL  left_wheel_link.STL  lidar_link.STL  rear_caster_hub_link.STL  rear_caster_wheel_link.STL  right_wheel_link.STL
src/igv/rviz/: igv_navigation.rviz  igv_slam.rviz
src/igv/scripts/: point_cloud_to_scanlines.py
src/igv/src/: joystick_controller.py  light.py  line_detectionclose.py  odom.py  serial.py
src/lidar_pkg/: package.xml
src/lidar_pkg/launch/: lidar.launch  rplidar.launch
src/lidar_pkg/rviz/: lidar.rviz
src/lidar_pkg/src/: hectorslam.py  lidar_node.py  rplidar.py
src/lidar_pkg/urdf/: lidar.urdf.xacro
(+19 files in other folders)
