<?xml version="1.0"?>
<package format="2">
  <name>lidar_pkg</name>
  <version>0.0.0</version>
  <description>The lidar_pkg package</description>
  <maintainer email="igv@todo.todo">igv</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for building and running -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Specify the Python version used in your package -->
  <build_depend>python-catkin-pkg-modules</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>python-rospkg-modules</build_depend>
  <build_depend>python-rospkg</build_depend>

  <!-- This line is important for catkin packages -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>

